--- a/src/app/exemplo-servicos1/exemplo-servicos1.component.html
+++ b/src/app/exemplo-servicos1/exemplo-servicos1.component.html
@@ -1,1 +1,4 @@
-<p>exemplo-servicos1 works!</p>
+<h2>Serviço 01</h2>
+<label for="nome">Digite seu nome: </label>
+<input type="text" [(ngModel)]="nome">
+<button type="button" (click)="adicionarNome()">Adicionar nome</button>
