--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,42 @@
-<app-primeiro-componente></app-primeiro-componente>
-<app-segundo-componente></app-segundo-componente>
-<app-pipe-customizado></app-pipe-customizado>
-<app-two-way-data-binding></app-two-way-data-binding>
-<app-renderizando-listas></app-renderizando-listas>
-<app-componente-personalizado nome="Rodrigo" sobrenome="Ulir"></app-componente-personalizado>
-<app-componente-personalizado nome="Arthur" sobrenome="Braz"></app-componente-personalizado>
-<app-componente-pai></app-componente-pai>
-<app-exemplo-servicos1></app-exemplo-servicos1>
-<app-exemplo-servicos2></app-exemplo-servicos2>
+<app-card titulo="Primeiro Componente" cor="#3D4D63">
+    <app-primeiro-componente></app-primeiro-componente>
+</app-card>
+
+<app-card titulo="Aprofundando conhecimento em Templates" cor="#B2E7E8">
+    <app-segundo-componente></app-segundo-componente>
+
+</app-card>
+
+<app-card titulo="Pipes" cor="#BFB9AA">
+    <app-pipe-customizado></app-pipe-customizado>
+
+</app-card>
+
+<app-card titulo="Two way data binding" cor="#F2D096">
+    <app-two-way-data-binding></app-two-way-data-binding>
+</app-card>
+
+<app-card titulo="Renderizando listas" cor="#ED8975">
+    <app-renderizando-listas></app-renderizando-listas>
+</app-card>
+
+<app-card titulo="Componentes personalizados (Input)" cor="#FFE3DC">
+
+    <app-componente-personalizado nome="Rodrigo" sobrenome="Ulir"></app-componente-personalizado>
+    <app-componente-personalizado nome="Arthur" sobrenome="Braz"></app-componente-personalizado>
+
+</app-card>
+
+<app-card titulo="Compartilhando dados entre Componentes" cor="#A2AD91">
+    <app-componente-pai></app-componente-pai>
+</app-card>
+
+<app-card titulo="Serviços" cor="#3A2D32">
+
+    <app-exemplo-servicos1></app-exemplo-servicos1>
+    <app-exemplo-servicos2></app-exemplo-servicos2>
+</app-card>
+
+<app-card titulo="Ciclo de vida">
+    <app-ciclo-de-vida-pai></app-ciclo-de-vida-pai>
+</app-card>
